fix blue highlight on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@ code {
   padding: 1vh;
   font-size: medium;
   font-weight: bold;
+  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
 }
 
 .header{
@@ -209,6 +210,7 @@ code {
     margin: auto;
    }
 }
+
 
 
 
